--- a/k8s/todo-list/web-service.yaml
+++ b/k8s/todo-list/web-service.yaml
@@ -8,7 +8,6 @@ spec:
       targetPort: 80
   selector:
     app: todo-web
-  type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -19,6 +18,7 @@ metadata:
     tags.datadoghq.com/service: alpine
     tags.datadoghq.com/version: v1
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: todo-web
