--- a/k8s/datadog/values.yaml
+++ b/k8s/datadog/values.yaml
@@ -1,35 +1,33 @@
 # https://artifacthub.io/packages/helm/datadog/datadog
-clusterName: monitoring
-
-## Set to 'datadoghq.com' to send data to the US1 site (default).
-## Set to 'datadoghq.eu' to send data to the EU site.
-## Set to 'us3.datadoghq.com' to send data to the US3 site.
-## Set to 'us5.datadoghq.com' to send data to the US5 site.
-## Set to 'ddog-gov.com' to send data to the US1-FED site.
-## Set to 'ap1.datadoghq.com' to send data to the AP1 site.
-
 datadog:
   site: us5.datadoghq.com
   apiKey: f6701d7cb9da8f4e536ae207a3e2f552
   appKey: fc8f362168ca67cef945955fdf20b8585c555e15
-  kubelet: 
-    tlsVerify: false
+
+  ## Set to true to enable the your cluster name
+  clusterName: moby-sandbox-eks
+  collectEvents: false
   
   # "Set up the Istio integration"
   clusterChecks:
-    enabled: true
+    enabled: false
 
   # Set up Istio log collection
   logs:
     enabled: true
     containerCollectAll: true
+    autoMultiLineDetection: true
+
+  dogstatsd:
+    useSocketVolume: false
+    useHostPort: true
+  useHostPID: false
 
   apm:
     portEnabled: true
-    port: 8126 # Default port for Datadog APM
+    port: 8126
     instrumentation:
-      enabled: true
-
+      enabled: false
   processAgent:
     processCollection: true
   networkMonitoring:
@@ -37,13 +35,19 @@ datadog:
 
 clusterAgent:
   enabled: true
-  admissionController:
-    enabled: true
-    mutateUnlabelled: false
-  replicas: 2
+  replicas: 1
   createPodDisruptionBudget: true
+  # true 일경우 pod이 생성시 timeout error
+  admissionController:
+    enabled: false
+    mutateUnlabelled: true
   podAnnotations:
     sidecar.istio.io/inject: "false"
+
 agents:
+  enabled: true
+  replicas: 1
+  tolerations:
+    - operator: Exists
   podAnnotations:
     sidecar.istio.io/inject: "false"
