--- a/k8s/datadog/values.yaml
+++ b/k8s/datadog/values.yaml
@@ -1,8 +1,8 @@
 # https://artifacthub.io/packages/helm/datadog/datadog
 datadog:
   site: us5.datadoghq.com
-  apiKey: f6701d7cb9da8f4e536ae207a3e2f552
-  appKey: fc8f362168ca67cef945955fdf20b8585c555e15
+  apiKey: api-key
+  appKey: app-key
 
   ## Set to true to enable the your cluster name
   clusterName: sandbox-eks
@@ -22,9 +22,6 @@ datadog:
     useSocketVolume: false
     useHostPort: true
   useHostPID: false
-
-
-
 
   apm:
     portEnabled: true
