fix: karpenter and cni prefixmode

--- a/k8s/todo-list/web-service.yaml
+++ b/k8s/todo-list/web-service.yaml
@@ -44,7 +44,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: hancheo/todo-db-fix
+          image: hancheo/todo-db-fix:arm
           env:
             - name: ASPNETCORE_ENVIRONMENT
               value: Test
