--- a/k8s/istio-operator/istio-operator.yaml
+++ b/k8s/istio-operator/istio-operator.yaml
@@ -1,6 +1,9 @@
 # https://istio.io/latest/docs/reference/config/istio.operator.v1alpha1/
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
+metadata:
+  namespace: istio-system
+  name: istio-control-plane
 spec:
   profile: default
   tag: '1.22.3'
@@ -15,23 +18,42 @@ spec:
       proxyMetadata:
         # https://github.com/istio/istio/issues/51430 istio brake datadog tracing
         DD_REMOTE_CONFIGURATION_ENABLED: "true"
+    accessLogFile: /dev/stdout
+    outboundTrafficPolicy:
+      mode: ALLOW_ANY
+  values:
+    global:
+      istioNamespace: istio-system
+    cni:
+      excludeNamespaces:
+        - istio-system
   components:
     cni:
+      # Installation in kube-system is recommended to ensure the system-node-critical priorityClassName can be used. 
+      # You can install in other namespace only on K8S clusters that allow 'system-node-critical' outside of kube-system.
+      namespace: kube-system
       enabled: true
+      k8s:
+        resources:
+          requests:
+            cpu: 100m
+            memory: 100Mi
+          limits:
+            memory: 512Mi
     ingressGateways:
       - name: istio-ingressgateway
         enabled: true
         k8s:
           hpaSpec:
-            minReplicas: 1
+            minReplicas: 2
           resources:
-            limits:
-              memory: 512Mi
             requests:
               cpu: 100m
-              memory: 256Mi
+              memory: 128Mi
+            limits:
+              memory: 1024Mi
           serviceAnnotations:
-            service.beta.kubernetes.io/aws-load-balancer-type: nlb
+            service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
             alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
             alb.ingress.kubernetes.io/healthcheck-port: '32197'
     pilot:
@@ -49,10 +71,11 @@ spec:
               }
             ]
         hpaSpec:
-          minReplicas: 1
+          minReplicas: 2
         resources:
-          limits:
-            memory: 512Mi
           requests:
             cpu: 100m
-            memory: 256Mi
+            memory: 512Mi
+          limits:
+            memory: 1024Mi
+
