--- a/k8s/istio-operator/istio-operator.yaml
+++ b/k8s/istio-operator/istio-operator.yaml
@@ -10,11 +10,14 @@ spec:
   meshConfig:
     enableTracing: true
     defaultConfig:
+      # https://istio.io/latest/docs/ops/configuration/traffic-management/network-topologies/#example-using-x-forwarded-for-capability-with-httpbin
+      gatewayTopology:
+        numTrustedProxies: 1
       holdApplicationUntilProxyStarts: true
       tracing: # Enable Datadog Tracing
-        datadog:
-          address: "$(HOST_IP):8126"
-        sampling: 100.0
+        # datadog:
+        #   address: "$(HOST_IP):8126"
+        # sampling: 100.0
       proxyMetadata:
         # https://github.com/istio/istio/issues/51430 istio brake datadog tracing
         DD_REMOTE_CONFIGURATION_ENABLED: "true"
@@ -54,6 +57,8 @@ spec:
               memory: 1024Mi
           serviceAnnotations:
             service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+            service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*" 
+            service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: preserve_client_ip.enabled=true
             alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
             alb.ingress.kubernetes.io/healthcheck-port: '32197'
     pilot:
